# modbus-data-energy

./: README.md  config.ini  main.py  pyproject.toml
src/Comunication/: conect.py
src/Config/: config.py
src/Model/: model.py
