[project]
name = "v1"
version = "0.1.0"
description = "Modular system for reading, processing, and storing data from Modbus devices using PyModbus."
authors = [{ name = "Moises De la Rosa Yemail", email = "mjlelouch@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pymodbus",
    "pyserial",
    "pydantic",
    
]


[project.scripts]
start = "main:main"

[tool.setuptools]
packages = ["src"]
py-modules = ["main"]
include-package-data = true


[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"